fixed the textbox out of screen in small phone

--- a/src/app/DetailedStatus/App.DetailsComponent.css
+++ b/src/app/DetailedStatus/App.DetailsComponent.css
@@ -46,6 +46,11 @@
     max-width: 98%;
 }
 
+.form-control {
+    width: 380px;
+    transition: all 0.5s ease-in-out;
+}
+
 @media screen and (max-width: 1000px) {
     .section1 {
         flex-direction: column;
@@ -74,5 +79,17 @@
     }
     .doughnut-chart {
         padding: 0px;
+    }
+
+}
+
+@media screen and (max-width: 510px) {
+    .section3 {
+        width: 120%;
+        padding-left: 20px;
+    }
+    .form-control {
+        width: 250px;
+        transition: all 0.5s ease-in-out;
     }
 }
